<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/AppBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/toolbar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">
            </Toolbar>

            <ImageView
                android:id="@+id/ic_return"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_back"
                app:layout_constraintTop_toTopOf="@id/toolbar"
                app:layout_constraintStart_toStartOf="@id/toolbar"
                app:layout_constraintBottom_toBottomOf="@id/toolbar"
                android:layout_marginStart="10dp"
                tools:ignore="ContentDescription">
            </ImageView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:text="@string/add_product_toolbar_title"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/toolbar"
                app:layout_constraintStart_toEndOf="@id/ic_return"
                app:layout_constraintTop_toTopOf="@id/toolbar"
                tools:ignore="TextContrastCheck" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/addItemText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_product_explanation_text"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:gravity="start"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/AppBarLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
    </TextView>

    <View
        android:id="@+id/ContainerAddItem"
        style="@style/ContainerComponents"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.609"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addItemText">
    </View>

    <TextView
        android:id="@+id/TextItemName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_product_name_text"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="@+id/edtItemName"
        app:layout_constraintTop_toTopOf="@+id/ContainerAddItem">
    </TextView>

    <EditText
        android:id="@+id/edtItemName"
        style="@style/TextContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/add_product_name_hint"
        app:layout_constraintEnd_toEndOf="@id/ContainerAddItem"
        app:layout_constraintStart_toStartOf="@+id/ContainerAddItem"
        app:layout_constraintTop_toBottomOf="@+id/TextItemName"
        tools:ignore="Autofill,LabelFor,SpeakableTextPresentCheck,VisualLintTextFieldSize">
    </EditText>

    <TextView
        android:id="@+id/TextItemQuantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_product_quantity_text"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="@+id/edtItemQuantity"

        app:layout_constraintTop_toBottomOf="@+id/edtItemName">
    </TextView>

    <EditText
        android:id="@+id/edtItemQuantity"
        style="@style/TextContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/add_product_hint_quantity"
        app:layout_constraintEnd_toEndOf="@id/ContainerAddItem"
        app:layout_constraintStart_toStartOf="@+id/ContainerAddItem"
        app:layout_constraintTop_toBottomOf="@+id/TextItemQuantity"
        tools:ignore="Autofill,LabelFor,SpeakableTextPresentCheck,VisualLintTextFieldSize">
    </EditText>

    <Button
        android:id="@+id/btnAddItem"
        android:text="@string/add_product_btn_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/green"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/edtItemQuantity"
        app:layout_constraintEnd_toEndOf="@+id/edtItemQuantity"
        tools:ignore="VisualLintBounds">
    </Button>

</androidx.constraintlayout.widget.ConstraintLayout>
